Add Logo styles

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <header class="header">
 <!--    <a href="#" class="logo">LC</a>-->
-    <img src="depositphotos_187475292-stock-illustration-logo-swoosh-ellipse-blue-letter.webp" width="100px" alt="">
+    <img src="depositphotos_187475292-stock-illustration-logo-swoosh-ellipse-blue-letter.webp" width="100px" alt="" class="logo">
     <button class="header__btn_open-topnav header__btn"><span class="icon-menu-open"></span></button>
     <ul class="topnav topnav_mobile_show">
         <button class="header__btn_close-topnav header__btn"><span class="icon-menu-close"></span></button>
